# SplatWeaver

./: README.md  demo.py  index.html  pyproject.toml  requirements.txt  setup.py
config/: config.json  eval.yaml  main.yaml
config/dataset/: arkit.yaml  dl3dv.yaml  general.yaml  re10k.yaml
config/dataset/view_sampler/: bounded.yaml  rank.yaml
config/experiment/: dl3dv.yaml  multi-dataset.yaml
config/loss/: lpips.yaml
config/model/encoder/: splatweaver.yaml
splatweaver/: eval_nvs.py  main.py
splatweaver/dataset/: __init__.py  data_module.py  dataset_arkit.py  dataset_general.py  dataset_re10k.py  dataset_scannetpp.py
splatweaver/dataset/view_sampler/: view_sampler_bounded.py  view_sampler_rank.py
splatweaver/loss/: loss.py  loss_chamfer_distance.py  loss_depth.py  loss_depth_consis.py  loss_depth_gt.py  loss_distill.py  loss_huber.py  loss_lod.py  loss_lpips.py  loss_mse.py  loss_normal_consis.py  loss_opacity.py  loss_point.py
splatweaver/misc/: utils.py
splatweaver/model/: model_wrapper.py
splatweaver/model/encoder/: encoder.py  splatweaver.py
splatweaver/model/model/: splatweaver.py
splatweaver/utils/: ba.py  cropping.py  image.py  pose.py
src/: eval_nvs.py  main.py
src/dataset/: data_module.py  dataset_dl3dv.py
src/loss/: loss_distill.py  loss_expert.py  loss_mse.py  loss_ssim.py
src/misc/: image_io.py
src/model/: model_wrapper.py
src/model/encoder/: __init__.py  encoder.py  splatweaver.py
src/model/model/: __init__.py  splatweaver.py
src/utils/: viz.py
static/css/: index.css
static/js/: index.js
(+12 files in other folders)
