[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "torch>=2.10.0", "wheel"]

[project]
dependencies = [
  "beartype>=0.22.9",
  "colorama>=0.4.6",
  "colorspacious>=1.1.2",
  "dacite>=1.9.2",
  "e3nn>=0.6.0",
  "einops>=0.8.2",
  "faiss-cpu>=1.14.3",
  "gsplat>=1.5.3",
  "huggingface-hub>=1.5.0",
  "hydra-core>=1.3.2",
  "imageio>=2.37.2",
  "jaxtyping>=0.3.7",
  "lightning>=2.6.1",
  "lpips>=0.1.4",
  "matplotlib>=3.10.8",
  "moviepy>=1.0.3",
  "numpy<2",
  "open3d>=0.19.0",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=12.1.1",
  "plyfile>=1.1.3",
  "pydantic>=2.12.5",
  "pytorch-wavelets>=1.3.0",
  "pywavelets>=1.8.0",
  "safetensors>=0.7.0",
  "scikit-image>=0.25.2",
  "scikit-video>=1.1.11",
  "svg-py>=1.10.0",
  "tabulate>=0.9.0",
  "timm>=1.0.25",
  "torch-scatter>=2.1.2",
  "tqdm>=4.67.3",
  "wandb>=0.25.0",
  "xformers>=0.0.35",
]
name = "splatweaver"
requires-python = ">= 3.10"
version = "0.0.1"

[tool.setuptools.packages.find]
include = ["splatweaver*"]
where = ["."]
